--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body{
 }
 .App{
   height: 100vh;
-  background-image: url('https://i.pinimg.com/564x/d2/a7/76/d2a77609f5d97b9081b117c8f699bd37.jpg');
+  background-image: url('https://w0.peakpx.com/wallpaper/538/546/HD-wallpaper-whatsapp-dark-mode-whatsapp.jpg');
 }
 .messages{
   width: 80%;
