--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ body{
   background-color: rgba(255, 255, 255, 0.25);
   backdrop-filter: blur(6px);
   border-radius: 10px;
-  color: black;
+  color: white;
   text-align: center;
   font-size: 18px;
   font-weight: 500;
